add redirect config from http to https

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 vaadin.launch-browser=true
 spring.application.name=ClusterAdminTool
+
+# SSL Configuration
+server.ssl.key-store=/etc/ssl/server_cert/keystore.p12
+server.ssl.key-store-password=Grqn6Z5I
+server.ssl.key-store-type=PKCS12
+server.port=443
